# Impulse-JIT

./: .clang-tidy  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  DEMO.md  LICENSE  PERFORMANCE_ANALYSIS.md  README.md  STATUS.md  superConspect.md  test_simple.impulse  test_ternary.impulse
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
benchmarks/: README.md  factorial.impulse  nbody.impulse  primes.impulse  sorting.impulse  sorting_10k.impulse  sorting_5k.impulse  sorting_large.impulse  sorting_small.impulse
cli/: go.mod  impulsec
docs/: PROFILING.md
frontend/: CMakeLists.txt
frontend/include/impulse/frontend/: ast.h  dump.h  expression_eval.h  frontend.h  lexer.h  lowering.h  parser.h  semantic.h
frontend/src/: dump.cpp  expression_eval.cpp  frontend.cpp  lexer.cpp  lowering.cpp  parser.cpp  semantic.cpp
ir/: CMakeLists.txt
ir/include/impulse/ir/: analysis.h  builder.h  cfg.h  constant_propagation.h  copy_propagation.h  dead_code_elimination.h  dump.h  interpreter.h  ir.h  optimizer.h  printer.h  ssa.h  ssa_verify.h
ir/src/: analysis.cpp  builder.cpp  cfg.cpp  constant_propagation.cpp  copy_propagation.cpp  dead_code_elimination.cpp  dump.cpp  interpreter.cpp  optimizer.cpp  placeholder.cpp  printer.cpp  ssa.cpp  ssa_verify.cpp
jit/: CMakeLists.txt
runtime/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp  test_acceptance.cpp  test_benchmarks.cpp  test_control_flow.cpp  test_edge_cases.cpp  test_functions.cpp  test_groups.h  test_ir.cpp  test_jit.cpp  test_lexer.cpp  test_operator.cpp  test_parser.cpp  test_profiling.cpp  test_runtime.cpp  test_semantic.cpp  test_sorting_profile.cpp
tests/acceptance/: harness.cpp  harness.h
tests/acceptance/cases/arrays/: expected.ast.txt  expected.cfg.txt  expected.ir.txt  expected.optimisation.txt  expected.runtime-trace.txt  expected.runtime.txt  expected.ssa.txt  expected.tokens.txt  program.impulse
tests/acceptance/cases/assignment/: expected.ast.txt  expected.cfg.txt  expected.ir.txt  expected.optimisation.txt  expected.runtime-trace.txt  expected.runtime.txt  expected.ssa.txt  expected.tokens.txt  program.impulse
tests/acceptance/cases/control_flow/: expected.ast.txt  expected.cfg.txt  expected.ir.txt  expected.optimisation.txt  expected.runtime-trace.txt  expected.runtime.txt  expected.ssa.txt  expected.tokens.txt  program.impulse
tests/acceptance/cases/diagnostics/: expected.ast.txt  expected.diagnostics.txt  expected.tokens.txt  program.impulse
tests/acceptance/cases/diagnostics_builtins/: expected.ast.txt  expected.diagnostics.txt  expected.ir.txt  expected.runtime.txt  expected.tokens.txt  program.impulse
tests/acceptance/cases/exam_factorial/: expected.ast.txt  expected.cfg.txt  expected.ir.txt  expected.optimisation.txt  expected.runtime-trace.txt  expected.runtime.txt  expected.ssa.txt  expected.tokens.txt  program.impulse
tests/acceptance/cases/exam_primes/: expected.ast.txt  expected.cfg.txt  expected.ir.txt  expected.optimisation.txt  expected.runtime-trace.txt  expected.runtime.txt  expected.ssa.txt  expected.tokens.txt  program.impulse
tests/acceptance/cases/exam_sorting/: expected.ast.txt  expected.cfg.txt  expected.ir.txt  expected.optimisation.txt  expected.runtime-trace.txt  expected.runtime.txt  expected.ssa.txt  expected.tokens.txt  program.impulse
tests/acceptance/cases/runtime_demo/: expected.ast.txt  expected.cfg.txt  expected.ir.txt  expected.optimisation.txt  expected.runtime-trace.txt  expected.runtime.txt  expected.ssa.txt  expected.tokens.txt  program.impulse
tests/acceptance/cases/runtime_io/: expected.ast.txt  expected.cfg.txt  expected.ir.txt  expected.runtime-trace.txt  expected.runtime.txt  expected.ssa.txt  expected.tokens.txt  program.impulse  stdin.txt
tests/acceptance/cases/strings/: expected.ast.txt  expected.cfg.txt  expected.ir.txt  expected.optimisation.txt  expected.runtime-trace.txt  expected.runtime.txt  expected.ssa.txt  expected.tokens.txt  program.impulse
tests/acceptance/cases/strings_repeat_error/: expected.ast.txt  expected.cfg.txt  expected.ir.txt  expected.runtime-trace.txt  expected.runtime.txt  expected.ssa.txt  expected.tokens.txt  program.impulse
tests/acceptance/cases/strings_slice_error/: expected.ast.txt  expected.cfg.txt  expected.ir.txt  expected.optimisation.txt  expected.runtime-trace.txt  expected.runtime.txt  expected.ssa.txt  expected.tokens.txt  program.impulse
tools/cpp-cli/: CMakeLists.txt  generate_expectations.cpp  main.cpp
(+68 files in other folders)
